--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.18'
+generated_by: 'Module::Install version 1.19'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,4 +32,4 @@ resources:
   homepage: https://github.com/tupinek/App-CPAN-Search
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/App-CPAN-Search
-version: 0.03
+version: '0.03'
