--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Base class and script for CPAN searching.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  English: 0
   ExtUtils::MakeMaker: 6.59
   File::Object: 0
   File::Spec::Functions: 0
