--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Base class and script for CPAN searching.'
+abstract: 'Tool to search on CPAN archive.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
